[gd_scene load_steps=3 format=3 uid="uid://dbprhhywwqkqv"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_jy3yw"]
[ext_resource type="Texture2D" uid="uid://7xkxn6v838hm" path="res://assets/art-works/menu-bg.jpg" id="2_slq6k"]

[node name="Node2D" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_jy3yw")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_slq6k")
stretch_mode = 6

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 50
alignment = 1

[node name="Button" type="Button" parent="BoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "on load
"

[node name="ColorRect" type="ColorRect" parent="BoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(70, 20)
layout_mode = 2
color = Color(0.317647, 0.529412, 0.886275, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="start" type="Button" parent="BoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "شروع"

[node name="exit" type="Button" parent="BoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "خروج"

[node name="ColorRect2" type="ColorRect" parent="BoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
color = Color(0.890196, 0.380392, 0.176471, 1)

[node name="TextEdit" type="TextEdit" parent="BoxContainer/VBoxContainer"]
visible = false
clip_contents = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "please enter here :"

[node name="HBoxContainer2" type="HBoxContainer" parent="BoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="loaded" type="Label" parent="BoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "loaded"

[node name="load" type="Button" parent="BoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "load"

[node name="save" type="Button" parent="BoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "save"

[node name="saved" type="Label" parent="BoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "saved"

[connection signal="pressed" from="BoxContainer/VBoxContainer/HBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/HBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/HBoxContainer2/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/HBoxContainer2/save" to="." method="_on_save_pressed"]
